--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@emailjs/browser": "^4.3.3",
     "@tsparticles/react": "^3.0.0",
     "@types/react-scroll": "^1.8.10",
+    "aos": "^2.3.4",
     "i18next": "^23.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.0",
-    "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.3.0",
